# autonixdoc

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  todo.md
.claude/: settings.json  settings.local.json
resources/: test-lib.nix
src/: cli.rs  lib.rs  main.rs  mapping.rs  nixdoc.rs
tests/: cli.rs
