[package]
name = "autonixdoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
toml = { version = "0.9.7", features = ["parse", "serde"] }
typed-builder = "0.21.2"

[dev-dependencies]
tempfile = "3.21.0"
